syntax = "proto3";

package scraper;

service ScraperService {
  rpc SubmitTask (ScrapeRequest) returns (ScrapeResponse);
}

message ScrapeRequest {
  string url = 1;
  map<string, string> headers = 2;
  map<string, string> cookies = 3;
}

message ScrapeResponse {
  bytes response_body = 1;
  int32 status_code = 2;
  map<string, string> response_headers = 3;
  map<string, string> response_cookies = 4;
}
